--- a/movie.html
+++ b/movie.html
@@ -5,41 +5,129 @@
 <title>BUSANSO – Movie Player</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+<!-- Movies data -->
 <script src="movies-data.js"></script>
 
 <!-- Firebase SDKs -->
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 
-<!-- Plyr CSS -->
+<!-- Plyr -->
 <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css" />
 
 <style>
-body{margin:0;background:#000;color:#fff;font-family:Arial,sans-serif;padding:16px}
-.player{max-width:900px;margin:0 auto;position:relative;aspect-ratio:16/9;background:#000;border-radius:10px;overflow:hidden;}
-.details{max-width:900px;margin:16px auto;background:#111;padding:16px;border-radius:14px}
-.meta{color:#aaa;font-size:14px;margin-bottom:8px}
-.watch{background:#e50914;color:#fff;font-size:20px;padding:16px;width:100%;border:none;border-radius:14px;font-weight:bold;cursor:pointer;margin-bottom:10px}
-.share{background:#222;color:#fff;font-size:16px;padding:14px;width:100%;border:none;border-radius:14px;cursor:pointer}
-.share-options{display:none;margin-top:10px;gap:10px;flex-wrap:wrap;display:flex}
-.share-options button{flex:1;padding:12px;border:none;border-radius:10px;font-weight:bold;cursor:pointer}
+*{box-sizing:border-box}
+body{
+  margin:0;
+  background:#000;
+  color:#fff;
+  font-family:Arial,sans-serif;
+}
+
+/* ===== PLAYER (BIG & CINEMATIC) ===== */
+.player{
+  width:100%;
+  height:56.25vw; /* 16:9 */
+  max-height:85vh;
+  background:#000;
+}
+
+.player video,
+.player iframe{
+  width:100%;
+  height:100%;
+}
+
+/* ===== DETAILS ===== */
+.details{
+  padding:16px;
+  max-width:1100px;
+  margin:0 auto;
+}
+.meta{color:#aaa;font-size:14px;margin-bottom:10px}
+.watch{
+  background:#e50914;
+  color:#fff;
+  font-size:20px;
+  padding:16px;
+  width:100%;
+  border:none;
+  border-radius:12px;
+  font-weight:bold;
+  cursor:pointer;
+  margin-bottom:10px;
+}
+.share{
+  background:#222;
+  color:#fff;
+  font-size:16px;
+  padding:14px;
+  width:100%;
+  border:none;
+  border-radius:12px;
+  cursor:pointer;
+}
+.share-options{
+  display:none;
+  margin-top:10px;
+  gap:10px;
+}
+.share-options button{
+  flex:1;
+  padding:12px;
+  border:none;
+  border-radius:10px;
+  font-weight:bold;
+  cursor:pointer;
+}
 .whatsapp{background:#25D366;color:#000}
 .imo{background:#00b2ff;color:#000}
 .tiktok{background:#000;color:#fff;border:1px solid #333}
-#commentsSection{max-width:900px;margin:20px auto;background:#111;padding:16px;border-radius:14px}
-#commentsList div{background:#222;padding:8px 10px;border-radius:8px;margin-bottom:6px;position:relative}
-#usernameInput,#commentInput{width:100%;padding:8px;border-radius:6px;background:#111;color:#fff;border:none;margin-bottom:6px}
-#commentBtn{padding:8px 16px;border:none;border-radius:8px;background:#e50914;color:#fff;font-weight:bold;cursor:pointer}
+
+/* ===== COMMENTS ===== */
+#commentsSection{
+  max-width:1100px;
+  margin:20px auto;
+  background:#111;
+  padding:16px;
+  border-radius:14px;
+}
+#commentsList div{
+  background:#222;
+  padding:8px 10px;
+  border-radius:8px;
+  margin-bottom:6px;
+  position:relative;
+}
+#usernameInput,#commentInput{
+  width:100%;
+  padding:10px;
+  border-radius:6px;
+  background:#111;
+  color:#fff;
+  border:none;
+  margin-bottom:8px;
+}
+#commentBtn{
+  padding:10px 16px;
+  border:none;
+  border-radius:8px;
+  background:#e50914;
+  color:#fff;
+  font-weight:bold;
+  cursor:pointer;
+}
 </style>
 </head>
 
 <body>
 
-<!-- Plyr Player -->
+<!-- PLAYER -->
 <div class="player">
-  <video id="player" controls crossorigin></video>
+  <video id="player" controls crossorigin playsinline></video>
 </div>
 
+<!-- DETAILS -->
 <div class="details">
   <h1 id="title"></h1>
   <div class="meta" id="meta"></div>
@@ -53,12 +141,12 @@ body{margin:0;background:#000;color:#fff;font-family:Arial,sans-serif;padding:16
     <button class="tiktok" id="shareTiktok">TikTok</button>
   </div>
 
-  <!-- AD SLOT (FREE CONTENT ONLY) -->
-  <div id="adBox" class="ad-box" style="display:none;"></div>
+  <div id="adBox" style="display:none;margin-top:10px"></div>
 
   <p id="synopsis"></p>
 </div>
 
+<!-- COMMENTS -->
 <div id="commentsSection">
   <h3>Comments</h3>
   <input id="usernameInput" placeholder="Your nickname">
@@ -67,11 +155,11 @@ body{margin:0;background:#000;color:#fff;font-family:Arial,sans-serif;padding:16
   <button id="commentBtn">Post Comment</button>
 </div>
 
-<!-- Plyr JS -->
+<!-- Plyr -->
 <script src="https://cdn.plyr.io/3.7.8/plyr.polyfilled.js"></script>
 
 <script>
-const firebaseConfig = {
+firebase.initializeApp({
   apiKey: "AIzaSyBGGV9F3Nv13nRJ8t4QCP5Y0IosmKfYz1s",
   authDomain: "busanso-pins.firebaseapp.com",
   databaseURL: "https://busanso-pins-default-rtdb.firebaseio.com",
@@ -79,154 +167,49 @@ const firebaseConfig = {
   storageBucket: "busanso-pins.firebasestorage.app",
   messagingSenderId: "137040014808",
   appId: "1:137040014808:web:b0684e17b6b0328da596ad"
-};
-firebase.initializeApp(firebaseConfig);
+});
 </script>
 
 <script>
-// ===== LOAD MOVIE =====
-var params = new URLSearchParams(location.search);
-var id = params.get("id");
-var movie = MOVIES.find(m => m.id === id);
+/* ===== LOAD MOVIE ===== */
+const params = new URLSearchParams(location.search);
+const id = params.get("id");
+const movie = MOVIES.find(m => m.id === id);
 if(!movie) location.replace("movies.html");
 
-// ===== ADS: FREE CONTENT ONLY =====
-var AD_INTERVAL = 10*60*1000; // 10 minutes
-var adTimer = null;
-
-function hasValidPIN(){
-  var pin = localStorage.getItem("activePIN");
-  var exp = Number(localStorage.getItem("pinExpiry"));
-  return pin && exp && Date.now() < exp;
-}
-
-function showAd(){
-  if(movie.type !== "free") return;
-  if(hasValidPIN()) return;
-  var adBox = document.getElementById("adBox");
-  if(!adBox) return;
-  adBox.style.display = "block";
-  adBox.innerHTML = "";
-  var s = document.createElement("script");
-  s.dataset.zone="10536867";
-  s.src="https://nap5k.com/tag.min.js";
-  s.async=true;
-  adBox.appendChild(s);
-}
-
-// ===== POPULATE INFO =====
+/* ===== INFO ===== */
 title.textContent = movie.title;
 meta.textContent = movie.country + " • " + movie.year;
 synopsis.textContent = movie.synopsis || "";
 
-// ===== STORAGE KEY =====
-const storageKey = "resume_movie_" + movie.id;
+/* ===== PLAYER ===== */
+const player = new Plyr('#player',{autoplay:true});
 
-// ===== INITIALIZE PLYR =====
-const player = new Plyr('#player',{ autoplay:true, controls:['play','progress','current-time','mute','volume','fullscreen'] });
-
-// ===== VIDEO NORMALIZATION (YouTube/Vimeo/Drive) =====
+/* ===== VIDEO NORMALIZATION ===== */
 function normalizeVideo(url){
-  url = url.trim();
-  // YouTube
-  if(url.includes("youtube.com") || url.includes("youtu.be")){
-    let videoId = "";
-    if(url.includes("youtu.be")) videoId=url.split("youtu.be/")[1].split(/[?&]/)[0];
-    else if(url.includes("/embed/")) videoId=url.split("/embed/")[1].split(/[?&]/)[0];
-    else if(url.includes("/shorts/")) videoId=url.split("/shorts/")[1].split(/[?&]/)[0];
-    else videoId=new URL(url).searchParams.get("v");
-    if(videoId) return {type:'youtube', source:videoId};
-  }
-  // Vimeo
-  if(url.includes("vimeo.com")) return {type:'vimeo', source:url.split("/").pop()};
-  // Google Drive
-  if(url.includes("drive.google.com")){
-    let match = url.match(/\/d\/([a-zA-Z0-9_-]+)/);
-    if(match) return {type:'mp4', source:`https://drive.google.com/uc?export=media&id=${match[1]}`};
-  }
-  // default
-  return {type:'mp4', source:url};
+  if(url.includes("youtube")) return {type:"youtube",src:new URL(url).searchParams.get("v")};
+  if(url.includes("youtu.be")) return {type:"youtube",src:url.split("/").pop()};
+  if(url.includes("vimeo")) return {type:"vimeo",src:url.split("/").pop()};
+  const m = url.match(/\/d\/([a-zA-Z0-9_-]+)/);
+  if(m) return {type:"video",src:`https://drive.google.com/uc?export=media&id=${m[1]}`};
+  return {type:"video",src:url};
 }
 
-// ===== LOAD MOVIE FUNCTION =====
-function loadMovie(userAction=false){
+function loadMovie(fullscreen=false){
   const v = normalizeVideo(movie.video);
-  let source;
-  if(v.type==='youtube') source={type:'youtube',sources:[{src:v.source,provider:'youtube'}]};
-  else if(v.type==='vimeo') source={type:'vimeo',sources:[{src:v.source,provider:'vimeo'}]};
-  else source={type:'video',sources:[{src:v.source,type:'video/mp4'}]};
-
-  player.source = source;
-
-  // Auto-resume
-  const saved = JSON.parse(localStorage.getItem(storageKey));
-  if(saved && saved.time) player.currentTime = saved.time;
-
-  // Auto-fullscreen if valid PIN and user clicked watch
-  if(userAction && hasValidPIN()) player.fullscreen.enter();
-
+  if(v.type==="youtube") player.source={type:"youtube",sources:[{src:v.src,provider:"youtube"}]};
+  else if(v.type==="vimeo") player.source={type:"vimeo",sources:[{src:v.src,provider:"vimeo"}]};
+  else player.source={type:"video",sources:[{src:v.src,type:"video/mp4"}]};
   player.play();
-
-  showAd();
-  if(adTimer) clearInterval(adTimer);
-  adTimer = setInterval(function(){
-    if(hasValidPIN()){ clearInterval(adTimer); return; }
-    showAd();
-  }, AD_INTERVAL);
+  if(fullscreen) player.fullscreen.enter();
 }
 
-// ===== AUTO-LOAD MOVIE ON PAGE LOAD =====
-window.addEventListener('load',()=>{ loadMovie(); });
+window.addEventListener("load",()=>loadMovie());
+watchBtn.onclick=()=>loadMovie(true);
 
-// ===== SAVE TIME PERIODICALLY =====
-player.on('timeupdate',()=>{ 
-  localStorage.setItem(storageKey, JSON.stringify({time:player.currentTime}));
-});
-
-// ===== WATCH BUTTON =====
-watchBtn.onclick = ()=>{ loadMovie(true); };
-
-// ===== SHARE LOGIC =====
-var SHARE_URL = "https://busanso-nation.github.io/home.html";
-var shareText = movie.title + "\n" + movie.country + " • " + movie.year + "\n\n" +
-                movie.synopsis + "\n\nWatch on BUSANSO:\n" + SHARE_URL;
-
-shareBtn.onclick = ()=>{ shareOptions.style.display = shareOptions.style.display==='flex'?'none':'flex'; };
-shareWhatsapp.onclick = ()=>{ window.open("https://wa.me/?text="+encodeURIComponent(shareText)); };
-shareImo.onclick = ()=>{ window.open("imo://chat?text="+encodeURIComponent(shareText)); };
-shareTiktok.onclick = ()=>{ navigator.clipboard.writeText(shareText); alert("Copied! Paste it on TikTok"); };
-
-// ===== COMMENTS =====
-var commentsRef = firebase.database().ref("comments/movies/" + movie.id);
-var savedName = localStorage.getItem("username");
-if(savedName) usernameInput.value = savedName;
-
-commentBtn.onclick = function(){
-  var user=usernameInput.value.trim().slice(0,20);
-  var text=commentInput.value.trim().slice(0,300);
-  if(!user||!text) return;
-  localStorage.setItem("username",user);
-  commentsRef.push({user:user,text:text,timestamp:firebase.database.ServerValue.TIMESTAMP});
-  commentInput.value="";
-};
-
-commentsRef.limitToLast(100).on("value", function(snap){
-  commentsList.innerHTML = "";
-  var arr = [];
-  snap.forEach(c=>arr.push({data:c.val(), ref:c.ref}));
-  arr.sort((a,b)=>b.data.timestamp-b.data.timestamp);
-  arr.forEach(c=>{
-    var div = document.createElement("div");
-    div.innerHTML="<strong>"+c.data.user+"</strong>: "+c.data.text;
-    if(localStorage.getItem("activePIN")==="Orion196"){
-      var b=document.createElement("button");
-      b.textContent="🗑"; b.style.position="absolute"; b.style.right="6px"; b.style.top="6px";
-      b.onclick=function(){ c.ref.remove(); };
-      div.appendChild(b);
-    }
-    commentsList.appendChild(div);
-  });
-});
+/* ===== SHARE ===== */
+shareBtn.onclick=()=>shareOptions.style.display=
+  shareOptions.style.display==="flex"?"none":"flex";
 </script>
 
 </body>
