--- a/movie.html
+++ b/movie.html
@@ -7,142 +7,54 @@
 
 <script src="movies-data.js"></script>
 
-<!-- Firebase -->
+<!-- Firebase SDKs -->
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 
-<!-- Plyr -->
+<!-- Plyr CSS -->
 <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css" />
 
 <style>
-*{box-sizing:border-box}
-html,body{
-  margin:0;
-  padding:0;
-  width:100%;
-  height:100%;
+body {
+  margin:0; background:#000; color:#fff; font-family:Arial,sans-serif;
+}
+.player {
+  width:100vw;
+  height:56.25vw; /* 16:9 aspect ratio */
+  max-height:90vh;
   background:#000;
-  color:#fff;
-  font-family:Arial,sans-serif;
+  display:flex;
+  justify-content:center;
+  align-items:center;
 }
-
-/* ===== GIANT PLAYER ===== */
-.player-wrapper{
-  position:relative;
-  width:100%;
-  height:85vh;          /* THIS is the key */
-  background:#000;
-}
-
-.player-wrapper video,
-.player-wrapper iframe{
-  width:100%;
-  height:100%;
-}
-
-/* Remove Plyr size limits */
-.plyr{
-  width:100% !important;
-  height:100% !important;
-}
-.plyr__video-wrapper{
-  height:100% !important;
-}
-
-/* ===== DETAILS ===== */
-.details{
-  max-width:1200px;
-  margin:0 auto;
-  padding:16px;
-}
-.meta{
-  color:#aaa;
-  font-size:14px;
-  margin-bottom:8px;
-}
-.watch{
-  width:100%;
-  padding:16px;
-  font-size:20px;
-  font-weight:bold;
-  border:none;
-  border-radius:12px;
-  background:#e50914;
-  color:#fff;
-  cursor:pointer;
-  margin-bottom:10px;
-}
-.share{
-  width:100%;
-  padding:14px;
-  font-size:16px;
-  border:none;
-  border-radius:12px;
-  background:#222;
-  color:#fff;
-  cursor:pointer;
-}
-.share-options{
-  display:none;
-  gap:10px;
-  margin-top:10px;
-}
-.share-options button{
-  flex:1;
-  padding:12px;
-  border:none;
-  border-radius:10px;
-  font-weight:bold;
-  cursor:pointer;
-}
-.whatsapp{background:#25D366;color:#000}
-.imo{background:#00b2ff;color:#000}
-.tiktok{background:#000;color:#fff;border:1px solid #333}
-
-/* ===== COMMENTS ===== */
-#commentsSection{
-  max-width:1200px;
-  margin:20px auto;
+.details {
+  max-width:1000px;
+  margin:16px auto;
   background:#111;
   padding:16px;
   border-radius:14px;
 }
-#commentsList div{
-  background:#222;
-  padding:8px;
-  border-radius:8px;
-  margin-bottom:6px;
-  position:relative;
-}
-#usernameInput,#commentInput{
-  width:100%;
-  padding:10px;
-  border:none;
-  border-radius:6px;
-  background:#111;
-  color:#fff;
-  margin-bottom:8px;
-}
-#commentBtn{
-  padding:10px 16px;
-  border:none;
-  border-radius:8px;
-  background:#e50914;
-  color:#fff;
-  font-weight:bold;
-  cursor:pointer;
-}
+.meta { color:#aaa; font-size:14px; margin-bottom:8px; }
+.watch { background:#e50914; color:#fff; font-size:20px; padding:16px; width:100%; border:none; border-radius:14px; font-weight:bold; cursor:pointer; margin-bottom:10px; }
+.share { background:#222; color:#fff; font-size:16px; padding:14px; width:100%; border:none; border-radius:14px; cursor:pointer; }
+.share-options { display:none; margin-top:10px; gap:10px; flex-wrap:wrap; display:flex; }
+.share-options button { flex:1; padding:12px; border:none; border-radius:10px; font-weight:bold; cursor:pointer; }
+.whatsapp { background:#25D366; color:#000; }
+.imo { background:#00b2ff; color:#000; }
+.tiktok { background:#000; color:#fff; border:1px solid #333; }
+#commentsSection { max-width:1000px; margin:20px auto; background:#111; padding:16px; border-radius:14px; }
+#commentsList div { background:#222; padding:8px 10px; border-radius:8px; margin-bottom:6px; position:relative; }
+#usernameInput,#commentInput { width:100%; padding:8px; border-radius:6px; background:#111; color:#fff; border:none; margin-bottom:6px; }
+#commentBtn { padding:8px 16px; border:none; border-radius:8px; background:#e50914; color:#fff; font-weight:bold; cursor:pointer; }
 </style>
 </head>
 
 <body>
 
-<!-- PLAYER -->
-<div class="player-wrapper">
-  <video id="player" playsinline controls crossorigin></video>
+<div class="player">
+  <video id="player" controls crossorigin></video>
 </div>
 
-<!-- DETAILS -->
 <div class="details">
   <h1 id="title"></h1>
   <div class="meta" id="meta"></div>
@@ -156,12 +68,10 @@ html,body{
     <button class="tiktok" id="shareTiktok">TikTok</button>
   </div>
 
-  <div id="adBox" style="display:none;margin-top:10px"></div>
-
+  <div id="adBox" style="display:none;"></div>
   <p id="synopsis"></p>
 </div>
 
-<!-- COMMENTS -->
 <div id="commentsSection">
   <h3>Comments</h3>
   <input id="usernameInput" placeholder="Your nickname">
@@ -173,7 +83,8 @@ html,body{
 <script src="https://cdn.plyr.io/3.7.8/plyr.polyfilled.js"></script>
 
 <script>
-firebase.initializeApp({
+// ===== FIREBASE =====
+const firebaseConfig = {
   apiKey: "AIzaSyBGGV9F3Nv13nRJ8t4QCP5Y0IosmKfYz1s",
   authDomain: "busanso-pins.firebaseapp.com",
   databaseURL: "https://busanso-pins-default-rtdb.firebaseio.com",
@@ -181,45 +92,122 @@ firebase.initializeApp({
   storageBucket: "busanso-pins.firebasestorage.app",
   messagingSenderId: "137040014808",
   appId: "1:137040014808:web:b0684e17b6b0328da596ad"
-});
+};
+firebase.initializeApp(firebaseConfig);
 
-/* ===== MOVIE ===== */
-const params=new URLSearchParams(location.search);
-const id=params.get("id");
-const movie=MOVIES.find(m=>m.id===id);
+// ===== LOAD MOVIE =====
+const params = new URLSearchParams(location.search);
+const id = params.get("id");
+const movie = MOVIES.find(m=>m.id===id);
 if(!movie) location.replace("movies.html");
 
-title.textContent=movie.title;
-meta.textContent=movie.country+" • "+movie.year;
-synopsis.textContent=movie.synopsis||"";
+// ===== POPULATE INFO =====
+title.textContent = movie.title;
+meta.textContent = movie.country + " • " + movie.year;
+synopsis.textContent = movie.synopsis || "";
 
-/* ===== PLAYER ===== */
-const player=new Plyr('#player',{autoplay:true});
+// ===== PLAYER =====
+const storageKey = "resume_" + movie.id;
+const player = new Plyr('#player', { 
+  autoplay:true, 
+  controls:['play','progress','current-time','mute','volume','fullscreen'] 
+});
 
+// ===== NORMALIZE VIDEO URL =====
 function normalize(url){
-  if(url.includes("youtube")) return {t:"youtube",v:new URL(url).searchParams.get("v")};
-  if(url.includes("youtu.be")) return {t:"youtube",v:url.split("/").pop()};
-  if(url.includes("vimeo")) return {t:"vimeo",v:url.split("/").pop()};
-  const m=url.match(/\/d\/([a-zA-Z0-9_-]+)/);
-  if(m) return {t:"video",v:`https://drive.google.com/uc?export=media&id=${m[1]}`};
-  return {t:"video",v:url};
+    url=url.trim();
+    // YouTube
+    if(url.includes("youtube.com") || url.includes("youtu.be")){
+        let id=null;
+        try{
+            if(url.includes("youtu.be/")) id=url.split("youtu.be/")[1].split(/[?&]/)[0];
+            else if(url.includes("/embed/")) id=url.split("/embed/")[1].split(/[?&]/)[0];
+            else if(url.includes("/shorts/")) id=url.split("/shorts/")[1].split(/[?&]/)[0];
+            else id=new URL(url).searchParams.get("v");
+        }catch(e){id=null;}
+        if(id) return {type:'youtube', source:id};
+    }
+    // Vimeo
+    if(url.includes("vimeo.com")){
+        const id = url.match(/\d+/);
+        if(id) return {type:'vimeo', source:id[0]};
+    }
+    // Google Drive
+    if(url.includes("drive.google.com")){
+        const match = url.match(/\/d\/([a-zA-Z0-9_-]+)/);
+        if(match) return {type:'video', source:`https://drive.google.com/uc?export=media&id=${match[1]}`};
+    }
+    // fallback
+    return {type:'video', source:url};
 }
 
-function loadMovie(full=false){
-  const v=normalize(movie.video);
-  if(v.t==="youtube") player.source={type:"youtube",sources:[{src:v.v,provider:"youtube"}]};
-  else if(v.t==="vimeo") player.source={type:"vimeo",sources:[{src:v.v,provider:"vimeo"}]};
-  else player.source={type:"video",sources:[{src:v.v,type:"video/mp4"}]};
-  player.play();
-  if(full) player.fullscreen.enter();
+// ===== LOAD MOVIE FUNCTION =====
+function loadMovie(fullscreen=false){
+    const v = normalize(movie.video);
+    if(v.type==='youtube' && !v.source){ alert("Invalid YouTube URL!"); return; }
+    
+    if(v.type==='youtube') player.source={type:'youtube',sources:[{src:v.source,provider:'youtube'}]};
+    else if(v.type==='vimeo') player.source={type:'vimeo',sources:[{src:v.source,provider:'vimeo'}]};
+    else player.source={type:'video',sources:[{src:v.source,type:'video/mp4'}]};
+
+    const saved = JSON.parse(localStorage.getItem(storageKey));
+    if(saved && saved.time) player.currentTime = saved.time;
+
+    if(fullscreen) player.fullscreen.enter();
+    player.play();
 }
 
-window.addEventListener("load",()=>loadMovie());
-watchBtn.onclick=()=>loadMovie(true);
+// ===== AUTO-LOAD =====
+window.addEventListener('load',()=>{ loadMovie(); });
 
-shareBtn.onclick=()=>{
-  shareOptions.style.display=shareOptions.style.display==="flex"?"none":"flex";
+// ===== SAVE TIME =====
+player.on('timeupdate',()=>{ 
+    localStorage.setItem(storageKey, JSON.stringify({time:player.currentTime}));
+});
+
+// ===== WATCH BUTTON =====
+watchBtn.onclick = ()=>{ loadMovie(true); };
+
+// ===== SHARE =====
+const SHARE_URL = "https://busanso-nation.github.io/home.html";
+const shareText = movie.title + "\n" + movie.country + " • " + movie.year + "\n\n" + (movie.synopsis||"") + "\n\nWatch on BUSANSO:\n" + SHARE_URL;
+
+shareBtn.onclick = ()=>{ shareOptions.style.display = shareOptions.style.display==='flex'?'none':'flex'; };
+shareWhatsapp.onclick = ()=>{ window.open("https://wa.me/?text="+encodeURIComponent(shareText)); };
+shareImo.onclick = ()=>{ window.open("imo://chat?text="+encodeURIComponent(shareText)); };
+shareTiktok.onclick = ()=>{ navigator.clipboard.writeText(shareText); alert("Copied! Paste it on TikTok"); };
+
+// ===== COMMENTS =====
+const commentsRef = firebase.database().ref("comments/movies/" + movie.id);
+const savedName = localStorage.getItem("username");
+if(savedName) usernameInput.value = savedName;
+
+commentBtn.onclick = ()=>{
+    const user=usernameInput.value.trim().slice(0,20);
+    const text=commentInput.value.trim().slice(0,300);
+    if(!user||!text) return;
+    localStorage.setItem("username",user);
+    commentsRef.push({user,text,timestamp:firebase.database.ServerValue.TIMESTAMP});
+    commentInput.value="";
 };
+
+commentsRef.limitToLast(100).on("value", snap=>{
+    commentsList.innerHTML = "";
+    const arr=[];
+    snap.forEach(c=>arr.push({data:c.val(), ref:c.ref}));
+    arr.sort((a,b)=>b.data.timestamp-b.data.timestamp);
+    arr.forEach(c=>{
+        const div=document.createElement("div");
+        div.innerHTML="<strong>"+c.data.user+"</strong>: "+c.data.text;
+        if(localStorage.getItem("activePIN")==="Orion196"){
+            const b=document.createElement("button");
+            b.textContent="🗑"; b.style.position="absolute"; b.style.right="6px"; b.style.top="6px";
+            b.onclick=function(){ c.ref.remove(); };
+            div.appendChild(b);
+        }
+        commentsList.appendChild(div);
+    });
+});
 </script>
 
 </body>
